# planify

./: .buildconfig  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  .vala-lint.conf  AI_POLICY.md  ARCHITECTURE.md  AUTHORS  CODE_OF_CONDUCT.md  LINGUAS  README.md  com.github.alainm23.planner.yml  config.vala.in  io.github.alainm23.planify.json  kk.po  meson.build  meson_options.txt  package-lock.json  package.json  planify.doap  run-macos.sh  uncrustify.cfg
backend/: meson.build  package-lock.json  package.json  tsconfig.json
backend/src/: eums.ts  server.ts
core/: Constants.vala  Enum.vala  QuickAdd.vala  QuickAddCore.vala  Util.vala  Utils.vala  config.vala.in  meson.build  planify.deps
core/Layouts/: HeaderItem.vala
core/Objects/: Attachment.vala  BaseObject.vala  Color.vala  DueDate.vala  Item.vala  Label.vala  ObjectEvent.vala  Project.vala  Promise.vala  Queue.vala  Release.vala  Reminder.vala  Section.vala  Source.vala  TranslationMetric.vala
core/Services/: Backup.vala  BackupExporter.vala  CalDAV.vala  ColorSchemeSettings.vala  Database.vala  EventBus.vala  LogService.vala  Settings.vala  SignalManager.vala  Store.vala  Todoist.vala  VTodo.vala
core/Util/: Datetime.vala  MarkdownProcessor.vala  Migrate.vala  Util.vala
core/Utils/: Datetime.vala  JsonUtils.vala  Util.vala
core/Widgets/: CircularProgressBar.vala  DeadlineButton.vala  DynamicIcon.vala  Entries.vala  IconColorProject.vala  ItemLabelChild.vala  ItemLabels.vala  LabelsPickerCore.vala  LoadingButton.vala  MarkdownEditor.vala  PinButton.vala  PriorityButton.vala  StatusButton.vala  TextView.vala
data/: com.github.alainm23.planify.appdata.xml.in.in  com.github.alainm23.planify.desktop.in.in  com.github.alainm23.planify.gschema.xml  com.github.alainm23.planner.appdata.xml.in  com.github.alainm23.planner.desktop.in  com.github.alainm23.planner.gresource.xml  com.github.alainm23.planner.gschema.xml  com.github.alainm23.task-planner.appdata.xml.in  com.github.alainm23.task-planner.appdata.xml.in.in  com.github.alainm23.task-planner.desktop.in  com.github.alainm23.task-planner.desktop.in.in  com.github.alainm23.task-planner.gresource.xml  com.github.alainm23.task-planner.gschema.xml  com.github.artegeek.planner.appdata.xml.in  com.github.artegeek.planner.desktop.in  com.github.artegeek.planner.gresource.xml  com.github.artegeek.planner.gschema.xml  credits.json  gschemas.compiled  io.github.alainm23.planify.appdata.xml.in.in  io.github.alainm23.planify.desktop.in.in  io.github.alainm23.planify.gresource.xml  io.github.alainm23.planify.gschema.xml  io.github.alainm23.planify.metainfo.xml.in.in  io.github.alainm23.planify.service.in  markdown.xml  markdown_dark.xml  markdownpp.lang  meson.build  stylesheet.css  translations_metrics.json
data/icons/: meson.build
data/man/: meson.build  planify-cli.1  planify-quick-add.1  planify.1
data/resources/: Task.vala  com.github.alainm23.planify.gresource.xml  com.github.alainm23.task-planner.gresource.xml  io.github.alainm23.planify.gresource.xml  test-video.webm
data/stylesheet/: animations.css  calendar.css  dialog-picker.css  index.css  sidebar.css  stylesheet.css  typography.css  variables.css
plugins/caldav/: Utils.vala  caldav.plugin  caldav.vala  meson.build
plugins/demo/: demo.plugin  demo.vala  meson.build
plugins/sidebar-labels/: LabelPaneRow.vala  LabelSidebar.vala  meson.build  sidebar-labels.plugin  sidebar-labels.vala
quick-add/: App.vala  Application.vala  Database.vala  Enum.vala  MainWindow.vala  ObjectsPatch.vala  Todoist.vala  Util.vala  meson.build
quick-add/Objects/: BaseObject.vala  Color.vala  DueDate.vala  Item.vala  ItemLabel.vala  Label.vala  Project.vala  Queue.vala  Section.vala
quick-add/Services/: DBusClient.vala  Database.vala  EventBus.vala  Settings.vala  Todoist.vala
quick-add/Widgets/: DynamicIcon.vala  HeaderItem.vala  HyperTextView.vala  IconColorProject.vala  ItemLabelChild.vala  ItemLabels.vala  LoadingButton.vala  PinButton.vala  ProjectButton.vala  ProjectPicker.vala  ProjectPickerRow.vala  ScheduleButton.vala
quick-add/cli/: ArgumentParser.vala  Main.vala  OutputFormatter.vala  TaskCreator.vala  TaskValidator.vala
search-provider/: io.github.alainm23.planify.SearchProvider.ini.in  io.github.alainm23.planify.SearchProvider.service.in  main.vala  meson.build  search-provider.vala  search-repository.vala
src/: App.vala  Application.vala  Config.vala.in  Datetime.vala  Enum.vala  MainWindow.vala  Util.vala  Utils.vala  meson.build  plannercore.deps
src/Dialogs/: CalendarSync.vala  CompletedTasks.vala  DatePicker.vala  ErrorDialog.vala  GoogleOAuth.vala  ImportDialog.vala  Item.vala  ItemChangeHistory.vala  ItemView.vala  Label.vala  LabelPicker.vala  Labels.vala  Loading.vala  ManageProjects.vala  ManageSectionOrder.vala  MessageDialog.vala  Preferences.vala  PreferencesDialog.vala  Project.vala  ProjectDescription.vala  ProjectPicker.vala  ProjectSettings.vala  QuickAdd.vala  QuickFind.vala  ReleaseDialog.vala  Repeat.vala  RepeatConfig.vala  Section.vala  Settings.vala  SettingsDialog.vala  ShareDialog.vala  ShortcutsDialog.vala  TodoistOAuth.vala  WhatsNew.vala
src/Layouts/: FilterPaneChild.vala  FilterPaneRow.vala  HeaderBar.vala  HeaderItem.vala  ItemBase.vala  ItemBoard.vala  ItemCard.vala  ItemRow.vala  ItemSidebarView.vala  ItemView.vala  LabelChild.vala  LabelRow.vala  ProjectContainerRow.vala  ProjectRow.vala  SectionBoard.vala  SectionChild.vala  SectionRow.vala  Sidebar.vala  SidebarSourceRow.vala  TaskRow.vala  TasklistRow.vala  ViewHeader.vala
src/Models/: ItemList.vala
src/Objects/: Area.vala  Backup.vala  BaseObject.vala  Check.vala  Collaborator.vala  DueDate.vala  Duedate.vala  Header.vala  Item.vala  ItemLabel.vala  Label.vala  Notification.vala  ParsedResult.vala  Pinboard.vala  Project.vala  Queue.vala  Reminder.vala  Repository.vala  Scheduled.vala  Section.vala  Shortcuts.vala  SourceTaskList.vala  Task.vala  (+3 more)
test/: meson.build  test-ai-unit.vala  test-caldav-integration.vala  test-chrono-es.vala  test-chrono.vala  test-cli-runner.vala
(+1215 files in other folders)
